--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,10 @@ body {
     margin-top: 2.5vw;
     font-size: 30px;
     text-align: center;
+    font-weight: bold;
 }
 
-/* Book Review Page */
-.BookReview {
+.Review {
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
