added grid but buggin and had style changes

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,31 +1,28 @@
+.NavBar {
+    /* margin: 20px; */
+    display: flex;
+    height: 60px;
+    background: black;
+    border: 5px solid black;
+}
+
 .NavBar-title {
     margin-left: 30px;
     margin-top: 30px;
+    color: white;
     font-size: 20px;
-}
-
-.NavBar {
-    margin: 20px;
-    display: flex;
-    height: 60px;
-    border-bottom: 3px solid black;
 }
 
 .NavBar > header {
     font-size: 20px;
     padding: 20px;
-    background: rgb(200, 231, 250);
-    margin-left: 20px;
-    border-top: 2px solid black;
-    border-left: 2px solid black;
-    border-right: 2px solid black;
-
-    border-top-right-radius: 1vw;
-    border-top-left-radius: 1vw;
+    background: black;
+    color: white;
 }
 
 .NavBar > header:hover {
     cursor: grab;
-    background: rgb(255, 255, 238);
+    background-color: white;
+    color: black;
 }
 
