--- a/src/App.css
+++ b/src/App.css
@@ -24,16 +24,14 @@ body {
 }
 
 .PageNav > button {
-    background-color: rgb(253, 253, 118);
+    background-color: black;
+    color: white;
     text-align: center;
     font-size: 20px;
 
     margin: 10px;
     margin-top: 0px;;
     padding: 10px;
-
-    border: 1px solid black;
-    border-radius: 10%;
 }
 
 .PageNav > button:hover {
@@ -44,4 +42,13 @@ body {
     cursor: not-allowed;
     color:rgb(177, 177, 177);
     border: 1px solid rgb(177, 177, 177);
+}
+
+.Home  {
+    text-align: center;
+}
+
+.Home > p {
+    /* margin-top: 40px; */
+    font-size: 20px;
 }
